--- a/_1/OneTimePad/src/main/resources/static/index.html
+++ b/_1/OneTimePad/src/main/resources/static/index.html
@@ -35,8 +35,8 @@
 
         <!-- Header -->
         <header id="header">
-            <h1><img src = "images/logo_icon.png"></h1>
-            <p>A stage &nbsp;&bull;&nbsp; For you&nbsp;&bull;&nbsp; Whatever you want</p>
+            <h1><img src = "img/py.png"></h1>
+            <p>NJU &nbsp;&bull;&nbsp; Cryptography Principle&nbsp;&bull;&nbsp; Yu Pan</p>
 
             <div class="container-login100">
                 <div class="limiter">
@@ -48,7 +48,7 @@
 
                             <div class="wrap-input100 validate-input"
                                  data-validate="Enter the username">
-                                <input id = "username" class="input100" type="text" name="username" placeholder="User">
+                                <input id = "username" class="input100" type="text" name="plain text" placeholder="Plain Text">
                                 <span class="focus-input100"></span>
                                 <span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
@@ -56,7 +56,7 @@
                             </div>
 
                             <div class="wrap-input100 validate-input" data-validate="Enter the password">
-                                <input id = "password" class="input100" type="password" name="password" placeholder="Password">
+                                <input id = "password" class="input100" type="text" name="Random Unicode" placeholder="Random Unicode">
                                 <span class="focus-input100"></span>
                                 <span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -65,10 +65,20 @@
 
                             <div class="container-login100-form-btn">
                                 <button id = "btn" class="login100-form-btn">
-                                    Login
+                                    Encode
                                 </button>
+                                <button id = "btn1" class="login100-form-btn">
+                                    Decode
+                                 </button>
                             </div>
 
+                            <div class="wrap-input100 validate-input" data-validate="">
+                                <input id = "result" class="input100" type="text" name="Result" placeholder="Result">
+                                <span class="focus-input100"></span>
+                                <span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+                            </div>
                             <!--<div class="text-center p-t-12">-->
 						<!--<span class="txt1">-->
 							<!--Forgot-->
